More Changes for Mod Manager

--- a/scripts/settings/Applied Settings/High End Nvidia/0100F2C0115B6000.ini
+++ b/scripts/settings/Applied Settings/High End Nvidia/0100F2C0115B6000.ini
@@ -1,40 +1,44 @@
 [Core]
-use_multi_core\use_global=true
+use_multi_core\use_global=false
 use_unsafe_extended_memory_layout\use_global=false
 use_unsafe_extended_memory_layout\default=false
 use_unsafe_extended_memory_layout=true
+use_multi_core\default=true
+use_multi_core=true
 
 [Cpu]
 cpu_accuracy_first_time\default=false
 cpu_accuracy_first_time=false
-cpu_accuracy\use_global=true
+cpu_accuracy\use_global=false
 cpuopt_unsafe_unfuse_fma\use_global=true
 cpuopt_unsafe_reduce_fp_error\use_global=true
 cpuopt_unsafe_ignore_standard_fpcr\use_global=true
 cpuopt_unsafe_inaccurate_nan\use_global=true
 cpuopt_unsafe_fastmem_check\use_global=true
 cpuopt_unsafe_ignore_global_monitor\use_global=true
+cpu_accuracy\default=true
+cpu_accuracy=0
 
 [Renderer]
-backend\use_global=true
+backend\use_global=false
 async_presentation\use_global=false
 force_max_clock\use_global=false
-vulkan_device\use_global=true
+vulkan_device\use_global=false
 fullscreen_mode\use_global=true
-aspect_ratio\use_global=false
-scaling_filter\use_global=true
+aspect_ratio\use_global=true
+scaling_filter\use_global=false
 fsr_sharpening_slider\use_global=true
-anti_aliasing\use_global=true
-max_anisotropy\use_global=true
+anti_aliasing\use_global=false
+max_anisotropy\use_global=false
 speed_limit\use_global=true
 use_disk_shader_cache\use_global=false
-gpu_accuracy\use_global=true
-use_asynchronous_gpu_emulation\use_global=true
+gpu_accuracy\use_global=false
+use_asynchronous_gpu_emulation\use_global=false
 nvdec_emulation\use_global=true
-accelerate_astc\use_global=true
-async_astc\use_global=true
+accelerate_astc\use_global=false
+async_astc\use_global=false
 astc_recompression\use_global=false
-use_reactive_flushing\use_global=true
+use_reactive_flushing\use_global=false
 shader_backend\use_global=true
 use_asynchronous_shaders\use_global=false
 use_fast_gpu_time\use_global=false
@@ -55,10 +59,10 @@ use_disk_shader_cache\default=true
 use_disk_shader_cache=true
 aspect_ratio\default=false
 aspect_ratio=1
-astc_recompression\default=false
-astc_recompression=2
-use_video_framerate\use_global=true
-barrier_feedback_loops\use_global=true
+astc_recompression\default=true
+astc_recompression=0
+use_video_framerate\use_global=false
+barrier_feedback_loops\use_global=false
 use_asynchronous_shaders\default=false
 use_asynchronous_shaders=true
 resolution_setup.use_global=false
@@ -66,6 +70,32 @@ resolution_setup.default=false
 resolution_setup\use_global=false
 resolution_setup\default=true
 resolution_setup=2
+scaling_filter\default=true
+scaling_filter=1
+max_anisotropy\default=false
+max_anisotropy=5
+backend\default=true
+backend=1
+speed_limit\default=true
+speed_limit=100
+use_asynchronous_gpu_emulation\default=true
+use_asynchronous_gpu_emulation=true
+vulkan_device\default=true
+vulkan_device=0
+accelerate_astc\default=true
+accelerate_astc=true
+async_astc\default=true
+async_astc=false
+anti_aliasing\default=false
+use_reactive_flushing\default=true
+anti_aliasing=2
+use_reactive_flushing=true
+gpu_accuracy\default=false
+gpu_accuracy=0
+use_video_framerate\default=false
+use_video_framerate=true
+barrier_feedback_loops\default=true
+barrier_feedback_loops=true
 
 [Audio]
 volume\use_global=true
