Changes to the way the custom config is written. More changes tomorrow to support new Mainline.

--- a/src/VisualImprovements.ini
+++ b/src/VisualImprovements.ini
@@ -2,12 +2,13 @@
 dfps = 1.5.5(Beta3)
 
 [Options]
-resolution = 4K UHD
+resolution = 1080p FHD
 fps = 60
 shadowresolution = Auto
 cameraquality = Enable
 ui = None
 first person = Disabled
+disable qreduction = Enable
 disable dof = Enable
 disable lensflare = Enable
 improve lod = Enable
