--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 
 *.pyc
+src/json.data/Version.json
+src/json.data/preset.json
+src/json.data/DFPS.json
+src/json.data/Description.json
+src/json.data/Cheats.json
