Code Clean up Part 7
Added swatches to custom settings.

--- a/src/Manager_Config.ini
+++ b/src/Manager_Config.ini
@@ -16,3 +16,14 @@ improve lod = On
 [Mode]
 managermode = Yuzu
 
+[Settings]
+font = Georgia
+color = neon-green
+shadow_color = deep-purple
+active_color = cyan
+style = cyborg
+scale = On
+backup = Off
+cheat-backup = On
+animation = On
+
