Code clean up part 9/????
Made a new function for loading images in the canvas class.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ src/json.data/preset.json
 src/json.data/DFPS.json
 src/json.data/Description.json
 src/json.data/Cheats.json
+src/Manager_Config.ini
