--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,5 @@
 
 *.pyc
-src/json.data/Version.json
-src/json.data/preset.json
-src/json.data/DFPS.json
-src/json.data/Description.json
-src/json.data/Cheats.json
 src/Manager_Config.ini
 scripts/Mods/Aspect Ratios/Aspect Ratio 16-10
 scripts/Mods/Aspect Ratios/Aspect Ratio 16-10 PS4 UI
@@ -24,3 +19,4 @@ scripts/Mods/FP Mods/First Person FOV 90
 scripts/Mods/UI Mods/Black Screen Fix
 scripts/Mods/UI Mods/Playstation UI
 scripts/Mods/UI Mods/Xbox UI
+src/logger.txt
