--- a/.github/workflows/python-app - Linux.yml
+++ b/.github/workflows/python-app - Linux.yml
@@ -7,10 +7,7 @@ permissions:
 
 jobs:
   build:
-    strategy:
-      matrix:
-        platform: [ ubuntu-20.04, windows-latest ]
-    runs-on: ${{ matrix.platform }}
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python 3.10
@@ -20,18 +17,18 @@ jobs:
     - name: Get pip cache dir
       id: pip-cache
       run: |
-        echo "pipcachedir=$(pip cache dir)" >> $GITHUB_ENV
+        echo "pipcachedir=$(pip cache dir)" >> $GITHUB_OUTPUT
     - name: pip cache
       uses: actions/cache@v2
       with:
-        path: ${{ env.pipcachedir }}
+        path: ${{ steps.pip-cache.outputs.pipcachedir }}
         key: ${{ runner.os }}-pip
         restore-keys: |
           ${{ runner.os }}-pip
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests patool ttkbootstrap==1.5.1 screeninfo packaging GPUtil psutil pyinstaller nuitka
+        pip install requests patool ttkbootstrap==1.5.1 screeninfo packaging GPUtil psutil pyinstaller
     - name: Build
       run: |
         cd ./src/
