--- a/.github/workflows/python-app - Windows.yml
+++ b/.github/workflows/python-app - Windows.yml
@@ -1,4 +1,4 @@
-name: Build Linux
+name: Build Windows
 
 on: [push, pull_request]
 
@@ -10,10 +10,10 @@ jobs:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python 3.10
+    - name: Set up Python 3.11
       uses: actions/setup-python@v3
       with:
-        python-version: "3.10"
+        python-version: "3.11"
     - name: Get pip cache dir
       id: pip-cache
       run: |
