--- a/.github/workflows/python-app - Windows.yml
+++ b/.github/workflows/python-app - Windows.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests patool ttkbootstrap==1.5.1 screeninfo packaging GPUtil psutil py2exe
+        pip install requests patool ttkbootstrap==1.5.1 screeninfo packaging GPUtil psutil nuitka
     - name: Build
       run: |
         cd ./src/
