--- a/.github/workflows/python-app - Linux.yml
+++ b/.github/workflows/python-app - Linux.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests patool ttkbootstrap==1.5.1 screeninfo packaging GPUtil psutil pyinstaller
+        pip install requests patool ttkbootstrap==1.5.1 screeninfo packaging GPUtil psutil pyinstaller cx_Freeze
     - name: Build
       run: |
         cd ./src/
