--- a/.github/workflows/build-multiplatform.yml
+++ b/.github/workflows/build-multiplatform.yml
@@ -1,4 +1,4 @@
-name: Build Linux
+name: Build multiplatform
 
 on: [push, pull_request]
 
@@ -7,13 +7,16 @@ permissions:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        os: [windows-latest, ubuntu-20.04]
+    runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python 3.10
+    - name: Set up Python 3.11
       uses: actions/setup-python@v3
       with:
-        python-version: "3.10"
+        python-version: "3.11"
     - name: Get pip cache dir
       id: pip-cache
       run: |
@@ -29,12 +32,14 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install requests patool ttkbootstrap==1.5.1 screeninfo packaging GPUtil psutil pyinstaller cx_Freeze
-    - name: Build
+    - name: Build ${{ matrix.os }}
       run: |
         cd ./src/
         python ./compile.py 
     - name: Upload artifacts
       uses: actions/upload-artifact@v3
       with:
-        name: artifacts
-        path: ./src/dist
+        name: artifacts-${{ matrix.os }}
+        path: |
+          ./src/build
+          ./src/dist
