--- a/.github/workflows/python-app - Linux.yml
+++ b/.github/workflows/python-app - Linux.yml
@@ -1,4 +1,4 @@
-name: Build multiplatform
+name: Build Linux
 
 on: [push, pull_request]
 
@@ -7,16 +7,13 @@ permissions:
 
 jobs:
   build:
-    strategy:
-      matrix:
-        os: [windows-latest, ubuntu-20.04]
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python 3.11
+    - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
-        python-version: "3.11"
+        python-version: "3.10"
     - name: Get pip cache dir
       id: pip-cache
       run: |
@@ -32,14 +29,12 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install requests patool ttkbootstrap==1.5.1 screeninfo packaging GPUtil psutil pyinstaller cx_Freeze
-    - name: Build ${{ matrix.os }}
+    - name: Build
       run: |
         cd ./src/
         python ./compile.py 
     - name: Upload artifacts
       uses: actions/upload-artifact@v3
       with:
-        name: artifacts-${{ matrix.os }}
-        path: |
-          ./src/build
-          ./src/dist
+        name: artifacts
+        path: ./src/dist
