--- a/.github/workflows/build-multiplatform.yml
+++ b/.github/workflows/build-multiplatform.yml
@@ -10,7 +10,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [windows-latest, ubuntu-20.04]
+        include:
+        - name: Windows
+          os: windows-latest
+          distpath: ./src/build
+        - name: Linux
+          os: ubuntu-20.04
+          distpath: ./src/dist
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
@@ -22,14 +28,12 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install requests patool ttkbootstrap==1.5.1 screeninfo packaging GPUtil psutil pyinstaller cx_Freeze
-    - name: Build ${{ matrix.os }}
+    - name: Build ${{ matrix.name }}
       run: |
         cd ./src/
         python ./compile.py 
     - name: Upload artifacts
       uses: actions/upload-artifact@v3
       with:
-        name: artifacts-${{ matrix.os }}
-        path: |
-          ./src/build
-          ./src/dist
+        name: artifacts-${{ matrix.name }}
+        path: ${{ matrix.distpath }}
