--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ scripts/Mods/UI Mods/Black Screen Fix
 scripts/Mods/UI Mods/Playstation UI
 scripts/Mods/UI Mods/Xbox UI
 src/logger.txt
+src/.idea/workspace.xml
