--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,9 @@ scripts/Mods/UI Mods/Playstation UI
 scripts/Mods/UI Mods/Xbox UI
 src/logger.txt
 src/.idea/workspace.xml
+src/.idea/workspace.xml
+src/.idea/misc.xml
+src/.idea/vcs.xml
+src/.idea/workspace.xml
+src/.idea/inspectionProfiles/profiles_settings.xml
+src/.idea/workspace.xml
