--- a/.github/workflows/build-multiplatform.yml
+++ b/.github/workflows/build-multiplatform.yml
@@ -1,9 +1,17 @@
 name: Build multiplatform
 
-on: [push, pull_request]
+on:
+  workflow_dispatch:
+    inputs:
+      tag:
+        description: Release git tag
+        type: string
+        required: true
+  push:
+  pull_request:
 
 permissions:
-  contents: read
+  contents: write
 
 jobs:
   build:
@@ -13,10 +21,10 @@ jobs:
         include:
         - name: Windows
           os: windows-latest
-          distpath: ./src/dist
+          artifactsPath: ./src/dist/*.exe
         - name: Linux
           os: ubuntu-20.04
-          distpath: ./src/dist
+          artifactsPath: ./src/dist/*.AppImage
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
@@ -27,13 +35,24 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests patool ttkbootstrap==1.5.1 screeninfo packaging GPUtil psutil pyinstaller cx_Freeze
+        pip install requests patool ttkbootstrap==1.5.1 screeninfo packaging GPUtil psutil pyinstaller
     - name: Build ${{ matrix.name }}
       run: |
         cd ./src/
-        python ./compile.py 
+        python ./compile.py --version ${{ inputs.tag }}
     - name: Upload artifacts
       uses: actions/upload-artifact@v3
       with:
         name: artifacts-${{ matrix.name }}
-        path: ${{ matrix.distpath }}
+        path: ./src/dist
+    - name: Publish release
+      if: ${{ github.event_name == 'workflow_dispatch' }}
+      uses: ncipollo/release-action@v1
+      with:
+        artifacts: ${{ matrix.artifactsPath }}
+        tag: ${{ inputs.tag }}
+        name: TOTK Optimizer ${{ inputs.tag }}
+        allowUpdates: true
+        artifactErrorsFailBuild: false
+        prerelease: true
+        token: ${{ secrets.GITHUB_TOKEN }}
