--- a/.github/workflows/build-multiplatform.yml
+++ b/.github/workflows/build-multiplatform.yml
@@ -31,11 +31,11 @@ jobs:
     - name: Set up Python 3.11
       uses: actions/setup-python@v3
       with:
-        python-version: "3.11"
+        python-version: "3.11.5"
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests patool ttkbootstrap==1.5.1 screeninfo packaging GPUtil psutil pyinstaller
+        pip install requests patool ttkbootstrap screeninfo packaging GPUtil psutil pyinstaller
     - name: Build ${{ matrix.name }}
       run: |
         cd ./src/
