--- a/.github/workflows/build-multiplatform.yml
+++ b/.github/workflows/build-multiplatform.yml
@@ -35,7 +35,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests patool ttkbootstrap screeninfo packaging GPUtil psutil pyinstaller
+        pip install requests patool ttkbootstrap=1.10 screeninfo packaging GPUtil psutil pyinstaller
     - name: Build ${{ matrix.name }}
       run: |
         cd ./src/
