--- a/.github/workflows/build-multiplatform.yml
+++ b/.github/workflows/build-multiplatform.yml
@@ -33,11 +33,11 @@ jobs:
       with:
         python-version: "3.11.5"
     - name: Install dependencies
-      if: ${{ matrix.name == "Linux"}}
+      if: ${{ matrix.name == 'Linux'}}
       run: |
         python -m pip install --upgrade pip
         pip install requests patool ttkbootstrap==1.5.1 screeninfo packaging GPUtil psutil pyinstaller
-      if: ${{ matrix.name == "Windows"}}
+      if: ${{ matrix.name == 'Windows'}}
       run: |
         python -m pip install --upgrade pip
         pip install requests patool ttkbootstrap screeninfo packaging GPUtil psutil pyinstaller
