--- a/.github/workflows/build-multiplatform.yml
+++ b/.github/workflows/build-multiplatform.yml
@@ -38,6 +38,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install requests patool ttkbootstrap==1.5.1 screeninfo packaging GPUtil psutil pyinstaller
       if: ${{ matrix.name == 'Windows'}}
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install requests patool ttkbootstrap screeninfo packaging GPUtil psutil pyinstaller
