--- a/.github/workflows/build-multiplatform.yml
+++ b/.github/workflows/build-multiplatform.yml
@@ -32,12 +32,12 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.11.5"
-    - name: Install dependencies
+    - name: Install dependencies Linux
       if: ${{ matrix.name == 'Linux' }}
       run: |
         python -m pip install --upgrade pip
         pip install requests patool ttkbootstrap==1.5.1 screeninfo packaging GPUtil psutil pyinstaller
-    - name: Install dependencies
+    - name: Install dependencies Windows
       if: ${{ matrix.name == 'Windows' }}
       run: |
         python -m pip install --upgrade pip
