--- a/.github/workflows/build-multiplatform.yml
+++ b/.github/workflows/build-multiplatform.yml
@@ -36,7 +36,7 @@ jobs:
       if: ${{ matrix.name == 'Linux' }}
       run: |
         python -m pip install --upgrade pip
-        pip install requests patool ttkbootstrap==1.5.1 screeninfo packaging GPUtil psutil pyinstaller
+        pip install requests patool ttkbootstrap screeninfo packaging GPUtil psutil pyinstaller
     - name: Install dependencies Windows
       if: ${{ matrix.name == 'Windows' }}
       run: |
