--- a/.github/workflows/build-multiplatform.yml
+++ b/.github/workflows/build-multiplatform.yml
@@ -35,7 +35,9 @@ jobs:
     - name: Install dependencies Linux
       if: ${{ matrix.name == 'Linux' }}
       run: |
-        pip install requests patool ttkbootstrap screeninfo packaging GPUtil psutil pyinstaller
+        python -m pip install --upgrade pip
+        pip install https://github.com/MaxLastBreath/ttkbootstrapFIX
+        pip install requests patool screeninfo packaging GPUtil psutil pyinstaller
     - name: Install dependencies Windows
       if: ${{ matrix.name == 'Windows' }}
       run: |
