--- a/.github/workflows/build-multiplatform.yml
+++ b/.github/workflows/build-multiplatform.yml
@@ -36,7 +36,7 @@ jobs:
       if: ${{ matrix.name == 'Linux' }}
       run: |
         python -m pip install --upgrade pip
-        pip install https://github.com/MaxLastBreath/ttkbootstrapFIX/blob/master/setup.py
+        pip install https://github.com/MaxLastBreath/ttkbootstrapFIX/tree/master/src/ttkbootstrap
         pip install requests patool screeninfo packaging GPUtil psutil pyinstaller
     - name: Install dependencies Windows
       if: ${{ matrix.name == 'Windows' }}
