--- a/.github/workflows/build-multiplatform.yml
+++ b/.github/workflows/build-multiplatform.yml
@@ -41,7 +41,7 @@ jobs:
       if: ${{ matrix.name == 'Windows' }}
       run: |
         python -m pip install --upgrade pip
-        pip install requests patool ttkbootstrap screeninfo packaging GPUtil psutil pyinstaller
+        pip install requests patool screeninfo packaging GPUtil psutil pyinstaller https://github.com/MaxLastBreath/ttkbootstrapFIX/zipball/master
     - name: Build ${{ matrix.name }}
       run: |
         cd ./src/
