Settings loader, New presets, etc

--- a/src/TOTKOptimizer.ini
+++ b/src/TOTKOptimizer.ini
@@ -1,3 +1,45 @@
 [Time]
-api = 1708674810.2147794
+api = 1708856206.7479558
+
+[Updates]
+dfps = UltraCam
+
+[Options]
+ui = Switch
+first person = Off
+
+[Paths]
+
+[Mode]
+managermode = Yuzu
+
+[Beyond]
+fps = 60
+menu fps = 60
+fov = 50
+vertical r stick = 1.0
+horizontal r stick = 1.0
+freecam sens = 30
+freecam speed = 5
+time speed = 1
+ani smoothing = 0.25
+rsdbheap = 1.0
+gametexturesheap = 1.0
+resolution = 0
+handheldwidth = 1
+handheldheight = 0
+shadow resolution = 3
+aspect ratio = 2
+render distance = 3
+benchmark = 1
+freecam = On
+handheldresolution = Off
+hide ui = On
+quality improvements = On
+triple buffer = Off
+depthoffield = Off
+lensflare = Off
+fog = Off
+animationfadeout = Off
+slowtime = On
 
