--- a/src/TOTKOptimizer.ini
+++ b/src/TOTKOptimizer.ini
@@ -14,7 +14,7 @@ first person = Off
 managermode = Yuzu
 
 [Beyond]
-fps = 60
+fps = 30
 menu fps = 60
 fov = 50
 vertical r stick = 1.0
@@ -28,18 +28,18 @@ gametexturesheap = 1.0
 resolution = 0
 handheldwidth = 1
 handheldheight = 0
-shadow resolution = 3
+shadow resolution = 0
 aspect ratio = 2
-render distance = 3
+render distance = 0
 benchmark = 1
 freecam = On
-handheldresolution = Off
+handheldresolution = On
 hide ui = On
-quality improvements = On
-triple buffer = Off
-depthoffield = Off
-lensflare = Off
-fog = Off
+quality improvements = Off
+triple buffer = On
+depthoffield = On
+lensflare = On
+fog = On
 animationfadeout = Off
 slowtime = On
 
