--- a/src/TOTKOptimizer.ini
+++ b/src/TOTKOptimizer.ini
@@ -1,5 +1,5 @@
 [Time]
-api = 1708856206.7479558
+api = 1708924215.5057847
 
 [Updates]
 dfps = UltraCam
@@ -14,7 +14,7 @@ first person = Off
 managermode = Yuzu
 
 [Beyond]
-fps = 30
+fps = 60
 menu fps = 60
 fov = 50
 vertical r stick = 1.0
@@ -25,17 +25,17 @@ time speed = 1
 ani smoothing = 0.25
 rsdbheap = 1.0
 gametexturesheap = 1.0
-resolution = 0
+resolution = 4
 handheldwidth = 1
 handheldheight = 0
-shadow resolution = 0
+shadow resolution = 2
 aspect ratio = 2
-render distance = 0
+render distance = 3
 benchmark = 1
 freecam = On
 handheldresolution = On
 hide ui = On
-quality improvements = Off
+quality improvements = On
 triple buffer = On
 depthoffield = On
 lensflare = On
