New Icons, UI, Extract Option, Fix Order,

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@ scripts/Mods/UI Mods/Playstation UI
 scripts/Mods/UI Mods/Xbox UI
 *.iml
 *.xml
+*.ini
+src/\!\!\!TOTK Optimizer/exefs/main.npdm
+src/\!\!\!TOTK Optimizer/exefs/subsdk3
+*.ini
