--- a/src/TOTKOptimizer.ini
+++ b/src/TOTKOptimizer.ini
@@ -1,11 +1,8 @@
-[Time]
-api = 1709011481.8180375
-
 [Updates]
 dfps = UltraCam
 
 [Options]
-ui = Switch
+ui = None
 first person = Off
 
 [Paths]
@@ -25,21 +22,21 @@ time speed = 1
 ani smoothing = 0.25
 rsdbheap = 1.0
 gametexturesheap = 1.0
-resolution = 4
+resolution = 2
 handheldwidth = 1
 handheldheight = 0
-shadow resolution = 2
+shadow resolution = 3
 aspect ratio = 2
 render distance = 3
 benchmark = 1
 freecam = On
-handheldresolution = On
+handheldresolution = Off
 hide ui = On
 quality improvements = On
-triple buffer = On
-depthoffield = On
-lensflare = On
-fog = On
+triple buffer = Off
+depthoffield = Off
+lensflare = Off
+fog = Off
 animationfadeout = Off
 slowtime = On
 
