--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,13 @@ scripts/Mods/FP Mods/First Person FOV 90
 scripts/Mods/UI Mods/Black Screen Fix
 scripts/Mods/UI Mods/Playstation UI
 scripts/Mods/UI Mods/Xbox UI
+src/\!\!\!TOTK Optimizer/romfs/UltraCam/maxlastbreath.ini
+src/\!\!\!TOTK Optimizer/exefs/subsdk3
+src/\!\!\!TOTK Optimizer/exefs/main.npdm
+.idea/workspace.xml
+.idea/vcs.xml
+.idea/TOTK-mods.iml
+.idea/modules.xml
+.idea/misc.xml
+.idea/inspectionProfiles/Project_Default.xml
+.idea/inspectionProfiles/profiles_settings.xml
