--- a/src/TOTKOptimizer.ini
+++ b/src/TOTKOptimizer.ini
@@ -2,7 +2,7 @@
 dfps = UltraCam
 
 [Options]
-ui = None
+ui = Switch
 first person = Off
 
 [Paths]
@@ -30,13 +30,16 @@ aspect ratio = 2
 render distance = 3
 benchmark = 1
 freecam = On
-handheldresolution = Off
+handheldresolution = On
 hide ui = On
 quality improvements = On
-triple buffer = Off
-depthoffield = Off
-lensflare = Off
-fog = Off
+triple buffer = On
+depthoffield = On
+lensflare = On
+fog = On
 animationfadeout = Off
 slowtime = On
+
+[Time]
+api = 1709018409.7510934
 
