--- a/src/TOTKOptimizer.ini
+++ b/src/TOTKOptimizer.ini
@@ -1,8 +1,11 @@
+[Time]
+api = 1709019212.787935
+
 [Updates]
 dfps = UltraCam
 
 [Options]
-ui = Switch
+ui = None
 first person = Off
 
 [Paths]
@@ -30,16 +33,13 @@ aspect ratio = 2
 render distance = 3
 benchmark = 1
 freecam = On
-handheldresolution = On
+handheldresolution = Off
 hide ui = On
 quality improvements = On
-triple buffer = On
-depthoffield = On
-lensflare = On
-fog = On
+triple buffer = Off
+depthoffield = Off
+lensflare = Off
+fog = Off
 animationfadeout = Off
 slowtime = On
-
-[Time]
-api = 1709018409.7510934
 
