--- a/.github/workflows/build-multiplatform.yml
+++ b/.github/workflows/build-multiplatform.yml
@@ -39,12 +39,12 @@ jobs:
       with:
         python-version: "3.11.5"
     - name: Install dependencies Linux
-      if: ${{ matrix.name == 'Linux' }}
+      if: startsWith(matrix.name, 'Linux' )
       run: |
         python -m pip install --upgrade pip
         pip install requests patool screeninfo packaging wmi GPUtil psutil pyinstaller https://github.com/MaxLastBreath/ttkbootstrapFIX/zipball/master
     - name: Install dependencies Windows
-      if: ${{ matrix.name == 'Windows' }}
+      if: startsWith(matrix.name, 'Windows' )
       run: |
         python -m pip install --upgrade pip
         pip install requests patool screeninfo packaging wmi GPUtil psutil pyinstaller https://github.com/MaxLastBreath/ttkbootstrapFIX/zipball/master
