--- a/.github/workflows/build-multiplatform.yml
+++ b/.github/workflows/build-multiplatform.yml
@@ -27,10 +27,10 @@ jobs:
           artifactsPath: ./src/dist/*.AppImage
         - name: Windows_dir
           os: windows-latest
-          artifactsPath: ./src/dist/*.zip
+          artifactsPath: ./src/dist/*
         - name: Linux_dir
           os: ubuntu-20.04
-          artifactsPath: ./src/dist/*.zip
+          artifactsPath: ./src/dist/*
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
