--- a/.github/workflows/build-multiplatform.yml
+++ b/.github/workflows/build-multiplatform.yml
@@ -31,6 +31,9 @@ jobs:
         - name: Linux_dir
           os: ubuntu-20.04
           artifactsPath: ./src/dist/*.zip
+        - name: MacOS
+          os: macos-latest
+          artifactsPath: ./src/dist/*.zip
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
@@ -38,13 +41,7 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.11.5"
-    - name: Install dependencies Linux
-      if: startsWith(matrix.name, 'Linux' )
-      run: |
-        python -m pip install --upgrade pip
-        pip install requests patool screeninfo packaging wmi GPUtil psutil pyinstaller https://github.com/MaxLastBreath/ttkbootstrapFIX/zipball/master
-    - name: Install dependencies Windows
-      if: startsWith(matrix.name, 'Windows' )
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install requests patool screeninfo packaging wmi GPUtil psutil pyinstaller https://github.com/MaxLastBreath/ttkbootstrapFIX/zipball/master
