--- a/.github/workflows/build-multiplatform.yml
+++ b/.github/workflows/build-multiplatform.yml
@@ -28,9 +28,9 @@ jobs:
         # - name: Windows_dir
         #   os: windows-latest
         #   artifactsPath: ./src/dist/*.zip
-        # - name: Linux_dir
-        #   os: ubuntu-20.04
-        #   artifactsPath: ./src/dist/*.zip
+        - name: Linux_dir
+          os: ubuntu-20.04
+          artifactsPath: ./src/dist/*.zip
         - name: Darwin
           os: macos-latest
           artifactsPath: ./src/dist/*.zip
