--- a/.github/workflows/build-multiplatform.yml
+++ b/.github/workflows/build-multiplatform.yml
@@ -25,15 +25,18 @@ jobs:
         # - name: Linux
         #   os: ubuntu-20.04
         #   artifactsPath: ./src/dist/*.AppImage
+        - name: MacOS x86_64
+          os: macos-latest
+          artifactsPath: ./src/dist/*.zip
+        - name: MacOS arm64
+          os: macos-latest
+          artifactsPath: ./src/dist/*.zip
         # - name: Windows_dir
         #   os: windows-latest
         #   artifactsPath: ./src/dist/*.zip
-        - name: Linux_dir
-          os: ubuntu-20.04
-          artifactsPath: ./src/dist/*.zip
-        - name: Darwin
-          os: macos-latest
-          artifactsPath: ./src/dist/*.zip
+        # - name: Linux_dir
+        #   os: ubuntu-20.04
+        #   artifactsPath: ./src/dist/*.zip
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
@@ -41,7 +44,18 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.11.5"
-    - name: Install dependencies
+    - name: Install dependencies Linux
+      if: startsWith(matrix.name, 'Linux' )
+      run: |
+        python -m pip install --upgrade pip
+        pip install requests patool screeninfo packaging wmi GPUtil psutil pyinstaller https://github.com/MaxLastBreath/ttkbootstrapFIX/zipball/master
+    - name: Install dependencies Windows
+      if: startsWith(matrix.name, 'Windows' )
+      run: |
+        python -m pip install --upgrade pip
+        pip install requests patool screeninfo packaging wmi GPUtil psutil pyinstaller https://github.com/MaxLastBreath/ttkbootstrapFIX/zipball/master
+    - name: Install dependencies MacOS
+      if: startsWith(matrix.name, 'MacOS' )
       run: |
         python -m pip install --upgrade pip
         pip install requests patool screeninfo packaging wmi GPUtil psutil pyinstaller https://github.com/MaxLastBreath/ttkbootstrapFIX/zipball/master
