--- a/.github/workflows/build-multiplatform.yml
+++ b/.github/workflows/build-multiplatform.yml
@@ -62,7 +62,7 @@ jobs:
     - name: Build ${{ matrix.name }}
       run: |
         cd ./src/
-        python ./compile_onedir.py --version ${{ inputs.tag }}
+        python ./compile_onedir.py --os ${{ matrix.name }} --version ${{ inputs.tag }}
       if: endsWith(matrix.name, 'dir')
     - name: Build ${{ matrix.name }}
       run: |
