--- a/.github/workflows/build-multiplatform.yml
+++ b/.github/workflows/build-multiplatform.yml
@@ -26,9 +26,11 @@ jobs:
         #   os: ubuntu-20.04
         #   artifactsPath: ./src/dist/*.AppImage
         - name: MacOS x86_64
-          os: macos-latest-large
+          # os: macos-latest
+          host: macos-latest-large
           artifactsPath: ./src/dist/*.zip
         - name: MacOS arm64
+          # os: macos-latest
           os: macos-latest
           artifactsPath: ./src/dist/*.zip
         # - name: Windows_dir
