--- a/.github/workflows/build-multiplatform.yml
+++ b/.github/workflows/build-multiplatform.yml
@@ -63,7 +63,7 @@ jobs:
       run: |
         cd ./src/
         python ./compile_onedir.py --os '${{ matrix.name }}'
-      if: ${{ endsWith(matrix.name, 'dir') && !startsWith(matrix.name, 'MacOS') }}
+      if: ${{ endsWith(matrix.name, 'dir') || startsWith(matrix.name, 'MacOS') }}
     - name: Build ${{ matrix.name }}
       run: |
         cd ./src/
