debug macos intel version

--- a/.github/workflows/build-multiplatform.yml
+++ b/.github/workflows/build-multiplatform.yml
@@ -19,24 +19,24 @@ jobs:
       fail-fast: false
       matrix:
         include:
-        - name: Windows
-          os: windows-latest
-          artifactsPath: ./src/dist/*.exe
-        - name: Linux
-          os: ubuntu-20.04
-          artifactsPath: ./src/dist/*.AppImage
+        # - name: Windows
+        #   os: windows-latest
+        #   artifactsPath: ./src/dist/*.exe
+        # - name: Linux
+        #   os: ubuntu-20.04
+        #   artifactsPath: ./src/dist/*.AppImage
         - name: MacOS-Intel
-          os: macos-latest-large
-          artifactsPath: ./src/dist/*.zip
-        - name: MacOS-Silicon
           os: macos-latest
           artifactsPath: ./src/dist/*.zip
-        - name: Windows_dir
-          os: windows-latest
-          artifactsPath: ./src/dist/*.zip
-        - name: Linux_dir
-          os: ubuntu-20.04
-          artifactsPath: ./src/dist/*.zip
+        # - name: MacOS-Silicon
+        #   os: macos-latest
+        #   artifactsPath: ./src/dist/*.zip
+        # - name: Windows_dir
+        #   os: windows-latest
+        #   artifactsPath: ./src/dist/*.zip
+        # - name: Linux_dir
+        #   os: ubuntu-20.04
+        #   artifactsPath: ./src/dist/*.zip
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
