--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,21 +1,22 @@
 altgraph==0.17.4
-certifi==2024.7.4
+certifi==2023.11.17
 charset-normalizer==3.3.2
 Cython==3.0.10
 GPUtil==1.4.0
-idna==3.7
+idna==3.6
+importlib==1.0.4
 macholib==1.16.3
-packaging==24.1
-patool==2.3.0
-pillow==10.4.0
-psutil==6.0.0
+packaging==23.2
+patool==2.0.0
+Pillow==10.1.0
+psutil==5.9.6
 pyinstaller==6.8.0
 pyinstaller-hooks-contrib==2024.7
 pyobjc-core==10.3.1
 pyobjc-framework-Cocoa==10.3.1
-requests==2.32.3
+requests==2.31.0
 screeninfo==0.8.1
 setuptools==70.2.0
 tk==0.1.0
 ttkbootstrap==1.10.1
-urllib3==2.2.2
+urllib3==2.1.0
