--- a/.github/workflows/build-multiplatform.yml
+++ b/.github/workflows/build-multiplatform.yml
@@ -58,7 +58,7 @@ jobs:
       if: startsWith(matrix.name, 'MacOS' )
       run: |
         python -m pip install --upgrade pip
-        pip install requests patool screeninfo packaging wmi GPUtil psutil pyinstaller https://github.com/MaxLastBreath/ttkbootstrapFIX/zipball/master
+        pip install requests patool screeninfo packaging wmi GPUtil importlib psutil pyinstaller https://github.com/MaxLastBreath/ttkbootstrapFIX/zipball/master
     - name: Build ${{ matrix.name }}
       run: |
         cd ./src/
