--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -4,12 +4,13 @@ charset-normalizer==3.3.2
 Cython==3.0.10
 GPUtil==1.4.0
 idna==3.6
+importlib==1.0.4
 macholib==1.16.3
 packaging==23.2
 patool==2.0.0
 Pillow==10.1.0
 psutil==5.9.6
-pyinstaller==6.8.0
+pyinstaller==6.9.0
 pyinstaller-hooks-contrib==2024.7
 pyobjc-core==10.3.1
 pyobjc-framework-Cocoa==10.3.1
