--- a/.github/workflows/build-multiplatform.yml
+++ b/.github/workflows/build-multiplatform.yml
@@ -62,12 +62,12 @@ jobs:
     - name: Build ${{ matrix.name }}
       run: |
         cd ./src/
-        python ./compile_onedir.py --version ${{ inputs.tag }}
+        python ./compile_onedir.py
       if: ${{ endsWith(matrix.name, 'dir') || startsWith(matrix.name, 'MacOS') }}
     - name: Build ${{ matrix.name }}
       run: |
         cd ./src/
-        python ./compile.py --version ${{ inputs.tag }}
+        python ./compile.py
       if: ${{ !endsWith(matrix.name, 'dir') && !startsWith(matrix.name, 'MacOS') }}
     - name: Upload artifacts
       uses: actions/upload-artifact@v3
