Revert "Test Compiler without -large"
This reverts commit a8bfe610b7660b27bd45985bbbdcbfa296f2901e.

--- a/.github/workflows/build-multiplatform.yml
+++ b/.github/workflows/build-multiplatform.yml
@@ -25,7 +25,10 @@ jobs:
         - name: Linux
           os: ubuntu-20.04
           artifactsPath: ./src/dist/*.AppImage
-        - name: MacOS
+        - name: MacOS Intel
+          os: macos-latest-large
+          artifactsPath: ./src/dist/*.zip
+        - name: MacOS Silicon
           os: macos-latest
           artifactsPath: ./src/dist/*.zip
         - name: Windows_dir
