--- a/.github/workflows/build-multiplatform.yml
+++ b/.github/workflows/build-multiplatform.yml
@@ -44,21 +44,10 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.12.0"
-    - name: Install dependencies Linux
-      if: startsWith(matrix.name, 'Linux' )
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests patool screeninfo packaging wmi GPUtil psutil pyinstaller https://github.com/MaxLastBreath/ttkbootstrapFIX/zipball/master
-    - name: Install dependencies Windows
-      if: startsWith(matrix.name, 'Windows' )
-      run: |
-        python -m pip install --upgrade pip
-        pip install requests patool screeninfo packaging wmi GPUtil psutil pyinstaller https://github.com/MaxLastBreath/ttkbootstrapFIX/zipball/master
-    - name: Install dependencies MacOS
-      if: startsWith(matrix.name, 'MacOS' )
-      run: |
-        python -m pip install --upgrade pip
-        pip install requests patool screeninfo packaging wmi GPUtil psutil pyinstaller https://github.com/MaxLastBreath/ttkbootstrapFIX/zipball/master
+        pip install requests patool screeninfo packaging wmi GPUtil psutil pyperclip pyinstaller https://github.com/MaxLastBreath/ttkbootstrapFIX/zipball/master
     - name: Build ${{ matrix.name }}
       run: |
         cd ./src/
