--- a/.github/workflows/build-multiplatform.yml
+++ b/.github/workflows/build-multiplatform.yml
@@ -31,7 +31,7 @@ jobs:
         - name: MacOS Silicon
           os: macos-latest
           artifactsPath: ./src/dist/*.zip
-        - name: Windows_dir
+        - name: Windows_nuitka
           os: windows-latest
           artifactsPath: ./src/dist/*.zip
         - name: Linux_dir
@@ -49,8 +49,14 @@ jobs:
         python-version: "3.13.0"
     - name: Install dependencies
       run: |
+        cd ./src/
         python -m pip install --upgrade pip
-        pip install requests patool screeninfo packaging wmi GPUtil colorlog psutil pyperclip pyinstaller https://github.com/MaxLastBreath/ttkbootstrapFIX/zipball/master
+        python dependencies.py
+    - name: Build ${{ matrix.name }}
+      run: |
+        cd ./src/
+        python ./compile_onedir.py
+      if: ${{ endsWith(matrix.name, 'nuitka')}}
     - name: Build ${{ matrix.name }}
       run: |
         cd ./src/
@@ -60,7 +66,7 @@ jobs:
       run: |
         cd ./src/
         python ./compile.py
-      if: ${{ !endsWith(matrix.name, 'dir') && !startsWith(matrix.name, 'MacOS') }}
+      if: ${{ !endsWith(matrix.name, 'dir') && !startsWith(matrix.name, 'MacOS') && !endsWith(matrix.name, 'nuitka') }}
     - name: Upload artifacts
       uses: actions/upload-artifact@v4.6.0
       with:
